Filled the lorem paragraphs with actual information

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
         <div class="left lg:w-[45%] my-14">
             <h4 class="text-blue-700 uppercase tracking-wider text-sm font-semibold">HOW IT STARTED</h4>
             <h2 class="text-lg font-semibold  text-black my-2">Our dream is global water purification transformation</h2>
-            <p class="text-sm text-neutral-500 my-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo dolorum quidem fugiat reiciendis. Neque iste ipsum porro incidunt nulla quasi illo blanditiis soluta ad omnis, aspernatur natus quibusdam libero perferendis in molestiae illum. Ducimus aspernatur possimus nostrum laudantium temporibus minima!</p>
+            <p class="text-sm text-neutral-500 my-4">Aquana was born from a collective dream of fostering health and wellness through superior hydration solutions. It began humbly, with a group of passionate individuals envisioning a world where pure, revitalizing water was accessible to all. With dedication and innovation, Aquana evolved into a leading provider of customized water products, driven by the belief that everyone deserves hydration that enhances their lives.</p>
         </div>
         <div class="right lg:w-[50%]">
             <img class="rounded-md w-full h-[300px] lg:h-80 object-cover" src="./logo/close-up-view-hands-protective-g.png" alt="">
@@ -70,14 +70,14 @@
      <!-- Mission -->
       <div class="shadow-xl p-10 ">
           <h5 class="text-sm text-orange-400 font-semibold tracking-wider mb-2">OUR MISSION</h5>
-          <h2 class="text-2xl mb-3 font-semibold">Lorem ipsum dolor sit amet consectetur adipisicing elit. </h2>
-          <p class="text-sm text-neutral-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro est ducimus iure et recusandae rem ullam aliquid velit quo nobis omnis quasi blanditiis excepturi repellat, quod, unde eos numquam vitae voluptatibus libero dolorem. Repellat, aliquam?</p>
+          <h2 class="text-2xl mb-3 font-semibold">Aquana is dedicated to providing premium hydration solutions worldwide.</h2>
+          <p class="text-sm text-neutral-500">Our mission at Aquana is to deliver unparalleled quality and innovation in every aspect of hydration. Through our commitment to excellence, we aim to exceed customer expectations by offering fast delivery, custom products, and cutting-edge water purification technologies. By prioritizing sustainability and customer satisfaction, we strive to make hydration a source of health and happiness for all.</p>
       </div>
      <!--  Vision-->
       <div class="shadow-xl p-10">
          <h5 class="text-sm text-orange-400 font-semibold tracking-wider mb-2">OUR VISION</h5>
-         <h2 class="text-2xl mb-3 font-semibold ">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h2>
-         <p class="text-sm text-neutral-500">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat sunt accusantium laudantium culpa nesciunt id ipsum facilis eligendi? Ducimus ut placeat blanditiis tenetur inventore consectetur ab nobis. Repellendus eaque dicta excepturi! Quidem optio quam vero.</p>
+         <h2 class="text-2xl mb-3 font-semibold ">Aquana envisions a world where hydration enhances every life.</h2>
+         <p class="text-sm text-neutral-500">At Aquana, we see hydration not just as a basic necessity, but as a transformative force that enriches daily living. Our vision encompasses a future where every individual experiences the revitalizing power of pure water, fostering wellness, vitality, and joy in communities worldwide. Through innovation and dedication, we strive to make this vision a reality, one refreshing drop at a time.</p>
       </div>
   </div>
   <!-- Values -->
@@ -94,7 +94,7 @@
                 </div>
                 <div class="top-0">
                  <h1 class="font-bold text-orange-400 text-lg">Execution</h1>
-                 <p class="text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, amet, itaque quod modi ab, ipsum a tempore nisi delectus minus iure laboriosam eius libero qui corporis odit? Quisquam alias minus a voluptates, rem voluptatem debitis!</p>
+                 <p class="text-sm">Execution is the heartbeat of Aquana, driving us to deliver on promises with precision and excellence. From sourcing to delivery, every step is meticulously planned and flawlessly executed to ensure the highest quality products and services for our customers.</p>
                 </div>
             </div>
             <div class="accountability flex gap-2 mb-6">
@@ -103,7 +103,7 @@
                 </div>
                 <div>
                     <h1 class="font-bold text-orange-400 text-lg">Accountability</h1>
-                    <p class="text-sm ">Lorem ipsum dolor sit amet consectetur adipisicing elit. At inventore quia nesciunt placeat itaque voluptas ab nemo minus officia maiores, distinctio, impedit illum atque cum optio voluptatibus voluptatum? Nobis, iusto dolorum atque cumque aliquam dolore.</p> 
+                    <p class="text-sm ">At Aquana, we uphold the value of accountability as the cornerstone of our integrity. We take ownership of our actions and decisions, holding ourselves responsible for the outcomes and striving to continuously learn and improve.</p> 
                 </div>
 
             </div>
@@ -113,7 +113,7 @@
                 </div>
                 <div>
                     <h1 class="font-bold text-orange-400 text-lg">Results</h1>
-                    <p class="text-sm ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident officiis voluptatibus tempora? Perspiciatis vitae laboriosam in ullam consequuntur eveniet cumque impedit molestiae, officiis aliquam ipsam doloremque dolor nulla ad provident a aliquid fugiat maiores perferendis.</p>
+                    <p class="text-sm ">Results define our success at Aquana, propelling us towards our goals with unwavering determination. We measure our achievements not only by meeting targets but by exceeding expectations, consistently delivering exceptional value and satisfaction to our customers.</p>
                 </div>
 
             </div>
