--- a/index.html
+++ b/index.html
@@ -109,15 +109,10 @@
       <div class="right-side lg:w-[40%] mt-10" data-aos="fade-left" data-aos-duration="1000">
         <p class="text-blue-700 font-semibold uppercase tracking-wider">Why Choose Us</p>
         <p class="text-xl my-4 font-semibold">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium,
-          veritatis?
+          Choose Aquana for pure, refreshing water that revitalizes your body daily.
         </p>
         <p class="text-sm text-neutral-500">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi
-          accusamus, at inventore sapiente earum atque sunt tempora cum nam
-          expedita minus eligendi iusto pariatur iste dolore, fugit ab
-          praesentium architecto esse fugiat. Culpa architecto repellat dolorem
-          quos eligendi enim nulla.
+          At Aquana, we pride ourselves on delivering more than just water; we offer a promise of revitalization with every drop. Our commitment to purity ensures that each sip is refreshing and rejuvenating, providing your body with the hydration it needs to thrive. With Aquana, you're not just choosing a water company; you're choosing a partner in wellness, dedicated to enhancing your everyday life with the highest quality water possible.
         </p>
         <button
           class="bg-orange-400 my-4 px-4 py-1.5 mt-6 rounded-md text-white font-semibold"
@@ -133,7 +128,7 @@
       <div class="top lg:w-[50%] mb-14">
         <p class="text-blue-700 font-semibold mb-1 uppercase text-[12px] tracking-wider">What we offer</p>
         <p class="text-3xl font-bold mb-2">Our Best Services</p>
-        <p class="text-sm ">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur accusantium, voluptatibus doloribus repudiandae suscipit corrupti. A vel cumque porro nesciunt?</p>
+        <p class="text-sm ">Aquana offers exceptional services tailored to your needs, ensuring fast delivery, customized products, and top-notch water purification solutions.</p>
       </div>
       <div class="bottom flex flex-col lg:flex-row  justify-center lg:justify-between gap-16 ">
 
@@ -141,7 +136,7 @@
         <div class="md:w-[450px]" >
         <img class="object-cover"  src="logo/online-delivery-service-conceptp.png" alt="Online water delivery" class="h-[200px] w-full rounded-md">
         <h3 class="text-orange-400 font-semibold text-xl mb-2">Fast Delivery</h3>
-        <p class="text-sm ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, nulla.</p>
+        <p class="text-sm ">Swift delivery ensures your hydration needs are promptly met.</p>
         <p class="text-sm text-neutral-400 mt-3 ">Learn more</p>
         </div>
 
@@ -149,7 +144,7 @@
         <div class="md:w-[450px]">
           <img class="object-cover" src="logo/water-bottle-water-drink-liquid.png" alt="bottled water" class="h-[200px] object-contain w-full border-2 rounded-md border-orange-400 ">
           <h3 class="text-orange-400 font-semibold text-xl mb-2">Custom Products</h3>
-          <p class="text-sm">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi, hic!</p>
+          <p class="text-sm">Tailored products crafted to perfection, just for you.</p>
           <p class="text-sm text-gray-500 mt-3">Learn more</p>
         </div>
 
@@ -158,7 +153,7 @@
         <div class="md:w-[450px]">
           <img class="object-cover" src="logo/close-up-view-hands-protective-g.png" alt="purified water" class="h-[200px] object-cover rounded-md w-full">
           <h3 class="text-orange-400 font-semibold text-xl mb-2">Water Purification</h3>
-          <p class="text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, suscipit?</p>
+          <p class="text-sm">Purifying water to pristine quality for your health and satisfaction.</p>
           <p class="text-sm text-gray-500 mt-3">Learn more</p>
         </div>
       </div>
@@ -253,8 +248,8 @@
     <div class=" lg:px-24 px-4 flex-col md:flex-row mb-10 mt-20 h-full flex w-full justify-evenly gap-10">
       <!-- left part of form -->
       <div class="words md:w-[40%] md:mt-32 mb-8">
-        <p class="text-blue-700 font-semibold text-3xl mb-3 ">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-        <p class="text-xs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam amet at, dolorem id sed est vero a sequi blanditiis aperiam. Facilis recusandae vero sit totam!</p>
+        <p class="text-blue-700 font-semibold text-xl mb-3 ">Aquana Service Request Form: Tailored Solutions for Your Hydration Needs</p>
+        <p class="text-sm">Welcome to Aquana's comprehensive service request form, designed to cater to your unique hydration requirements. Whether you're seeking expedited delivery, personalized products, or state-of-the-art water purification, our team is committed to fulfilling your needs with efficiency, precision, and unparalleled quality assurance.</p>
       </div>
       <!-- FORM -->
       <div class="form ">
