--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     </div>
 
     <!--What we offer-->
-    <div class="lg:px-24 px-4 lg:mb-40">
+    <div class="lg:px-24 px-4 lg:mb-40 mb-10">
       <div class="top lg:w-[50%] mb-14">
         <p class="text-blue-700 font-semibold mb-1 uppercase text-[12px] tracking-wider">What we offer</p>
         <p class="text-3xl font-bold mb-2">Our Best Services</p>
@@ -141,7 +141,7 @@
         </div>
 
       <!-- second card -->
-        <div class="md:w-[450px]">
+        <div class="md:w-[450px] ">
           <img class="object-cover" src="logo/water-bottle-water-drink-liquid.png" alt="bottled water" class="h-[200px] object-contain w-full border-2 rounded-md border-orange-400 ">
           <h3 class="text-orange-400 font-semibold text-xl mb-2">Custom Products</h3>
           <p class="text-sm">Tailored products crafted to perfection, just for you.</p>
@@ -160,12 +160,12 @@
     </div>
 
     <!-- Enjoy the convenience -->
-    <div class="px-24 mb-40">
-      <div class="convenience flex flex-col justify-center items-center mb-8 ">
+    <div class="lg:px-24 px-4 mb-40">
+      <div class="convenience flex flex-col justify-center md:items-center mb-8 ">
         <h2 class="font-semibold text-2xl text-blue-700 mb-2">ENJOY THE CONVENIENCE OF THE AQUANA APP</h2>
         <h5 class="font-semibold text-xl">How does it work ?</h5>
       </div>
-      <div class="delivery flex justify-evenly gap-7 mb-8">
+      <div class="delivery flex flex-wrap justify-evenly gap-7 mb-8">
         <!-- place order -->
         <div>
          <img class="border border-gray-300 h-[200px] rounded-md" src="logo/tiny-woman-ordering-parcel-onlin.png" alt="place-your-aquana-water-delivery-order">
@@ -184,18 +184,18 @@
           <p class="text-blue-700 font-semibold text-xl">3. Get It Delivered</p>
         </div>
       </div>
-      <div class="buttons flex justify-evenly">
+      <div class="buttons flex flex-col md:justify-evenly md:flex-row gap-y-10">
         <button class="bg-orange-400 px-6 py-3 text-white " type="button">DOWNLOAD FOR ANDROID</button>
         <button class="bg-orange-400 text-white px-10 py-3  " type="button">DOWNLOAD FOR IOS</button>
       </div>
     </div>
 
     <!-- Testimonials -->
-    <div class="px-24 mb-40">
+    <div class="lg:px-24 px-4 mb-40">
       <div class="heading flex justify-center items-center flex-col mb-8 ">
         <p class="text-blue-700 font-semibold uppercase tracking-wider">Testimonials</p>
         <p class="text-2xl font-bold mb-4">What our Clients Say</p>
-        <p class="w-[50%] text-center text-neutral-500">There are many variations of passages of Lorem Ipsum available but the majority have suffered alteration in some form.</p>
+        <p class="lg:w-[50%] text-center text-neutral-500">There are many variations of passages of Lorem Ipsum available but the majority have suffered alteration in some form.</p>
       </div>
       <div class="testimonials flex flex-row gap-4 flex-wrap lg:flex-nowrap">
         <!-- 1st card -->
