Additional responsiveness to the web

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://kit.fontawesome.com/ce6898a04b.js" crossorigin="anonymous"></script>
   </head>
 
-  <body class="max-w-[100%] overflow-x-hidden">
+  <body class="mx-auto container overflow-x-hidden">
     <!-- nav bar -->
     <main-header></main-header>
 
@@ -252,8 +252,8 @@
         <p class="text-sm">Welcome to Aquana's comprehensive service request form, designed to cater to your unique hydration requirements. Whether you're seeking expedited delivery, personalized products, or state-of-the-art water purification, our team is committed to fulfilling your needs with efficiency, precision, and unparalleled quality assurance.</p>
       </div>
       <!-- FORM -->
-      <div class="form ">
-        <form action="" method="post" class=" border px-8 shadow-xl rounded-md mt-6 w-96 bg-white">
+      <div class="form  ">
+        <form action="" method="post" class=" border px-8 shadow-xl rounded-md mt-6 md:w-96  bg-white">
           <fieldset class="flex flex-col gap-1">
             <p class="text-center my-2 font-semibold text-blue-700 underline">GET IN TOUCH</p>
             <label class="mt-3 mb-2" for="full-name">Enter your full name: <br>
